add initial structure

--- a/paper.tex
+++ b/paper.tex
@@ -41,15 +41,33 @@
 
 \end{frontmatter}
 
-%%%%%%%%%%% The article body starts:
+\section{Introduction}
+\label{sec:intro}
 
-\section*{Introduction}
+\section{Background and State of the Art}
+\label{sec:sota}
 
+- DPV
+- DCMI 
+- PROV
+- DCAT
+- ODRL
 
-%%%%%%%%%%% The bibliography starts:
-\begin{thebibliography}{99}
+\section{Rights Exercise and Management}
+\label{sec:rights}
 
-\bibitem{r1}
+\begin{itemize}
+    \item[Section 3.1.] Information about the existence of rights
+    \item[Section 3.2.] Justifications
+    \item[Section 3.3.] Notifications related to rights activities
+    \item[Section 3.4.] Records of rights activities
+    \item[Section 3.5.] GDPR-related rights requests as machine-executable policies
+\end{itemize}
 
-\end{thebibliography}
+\section{Conclusions and Future Work}
+\label{sec:conclusions}
+
+\bibliography{ref}
+\bibliographystyle{vancouver}
+
 \end{document}
