--- a/ref.bib
+++ b/ref.bib
@@ -1,7 +1,7 @@
 @article{pandit2024dpv,
   title={{Data Privacy Vocabulary ({DPV}) -- Version 2.0}},
   author={Pandit, Harshvardhan J and Esteves, Beatriz and Krog, Georg P and Ryan, Paul and Golpayegani, Delaram and Flake, Julian},
-  journal={23rd International Semantic Web Conference (ISWC) (to appear - preprint \url{https://doi.org/10.48550/arXiv.2404.13426})},
+  journal={23rd International Semantic Web Conference (ISWC) (to appear -- preprint \url{https://doi.org/10.48550/arXiv.2404.13426})},
   year={2024}
 }
 
