finalise section 3 and start on conclusions

--- a/ref.bib
+++ b/ref.bib
@@ -57,3 +57,32 @@
 	doi = {10.1007/978-981-16-3049-1_17},
 	pages = {197--208},
 }
+
+@misc{european_data_protection_board_guidelines_2023,
+	title = {Guidelines 01/2022 on data subject rights -- {Right} of access {Version} 2.1},
+	url = {https://www.edpb.europa.eu/system/files/2023-04/edpb_guidelines_202201_data_subject_rights_access_v2_en.pdf},
+	author = {{European Data Protection Board}},
+	year = {2023},
+}
+
+@misc{article_29_data_protection_working_party_guidelines_2017,
+	title = {Guidelines on the right to data portability under {Regulation} 2016/679, {WP242} rev.01},
+	url = {https://www.edpb.europa.eu/our-work-tools/our-documents/guidelines/guidelines-right-data-portability-under-regulation-2016679_en},
+	author = {{Article 29 Data Protection Working Party}},
+	year = {2017},
+}
+
+@misc{sis_ii_supervision_coordination_group_schengen_2023,
+	title = {The {Schengen} {Information} {System} -- a guide for exercising data subjects’ rights: the right of access, rectification and erasure},
+	url = {https://www.edpb.europa.eu/our-work-tools/our-documents/csc-data-subject-rights/schengen-information-system-guide-exercising_en},
+	author = {{SIS II Supervision Coordination Group}},
+	year = {2023},
+}
+
+@misc{fornara_odrl_2024,
+	title = {{ODRL} {Formal} {Semantics}},
+	url = {https://w3c.github.io/odrl/formal-semantics/},
+	type = {Draft Community Group Report 02 September 2024},
+	author = {Fornara, Nicoletta and Rodríguez-Doncel, Víctor and Esteves, Beatriz and Steyskal, Simon and Smith, Benedict Whittam},
+	year = {2024},
+}
